--- a/about.html
+++ b/about.html
@@ -102,44 +102,49 @@
         <!-- Main -->
         <main class="container">
             <div class="about__inner">
-                <div class="row about">
-                    <div class="col-6">
+                <div class="row gy-3 about">
+                    <div class="col-6 col-md-12">
                         <img
                             src="./assets/img/about/about1.png"
                             alt=""
                             class="about__img"
                         />
                     </div>
-                    <div class="col-6">
-                        <h2 class="section-heading section-heading-2">
-                            WHO WE ARE
-                        </h2>
-                        <p class="about__desc section-desc-1">
-                            We are the Daddy World team, we consist of 4
-                            members, the team leader is Hoang Bao Trung who
-                            specializes in product design and planning for the
-                            team, the 2nd member is Bui Hoang Anh who
-                            specializes in front-end. Of the team, the third
-                            member is Nguyen Thanh Duong who is charge of the
-                            back-end for the team, And lastly, indispensable is
-                            Hoang Ha who is the team's guide.
-                        </p>
+                    <div class="col-6 col-md-12">
+                        <div class="about-content__wrap">
+                            <h2 class="section-heading section-heading-2">
+                                WHO WE ARE
+                            </h2>
+                            <p class="about__desc section-desc-1">
+                                We are the Daddy World team, we consist of 4
+                                members, the team leader is Hoang Bao Trung who
+                                specializes in product design and planning for
+                                the team, the 2nd member is Bui Hoang Anh who
+                                specializes in front-end. Of the team, the third
+                                member is Nguyen Thanh Duong who is charge of
+                                the back-end for the team, And lastly,
+                                indispensable is Hoang Ha who is the team's
+                                guide.
+                            </p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="row about">
-                    <div class="col-6">
-                        <h2 class="section-heading section-heading-2">
-                            WHAT WE DO
-                        </h2>
-                        <p class="about__desc section-desc-1">
-                            We specialize in making websites products such as
-                            e-commerce platforms, MMO websites, and more. In
-                            particular, we can also integrate AI into your
-                            website.
-                        </p>
+                <div class="row gy-3 about">
+                    <div class="col-6 col-md-12">
+                        <div class="about-content__wrap">
+                            <h2 class="section-heading section-heading-2">
+                                WHAT WE DO
+                            </h2>
+                            <p class="about__desc section-desc-1">
+                                We specialize in making websites products such
+                                as e-commerce platforms, MMO websites, and more.
+                                In particular, we can also integrate AI into
+                                your website.
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-md-12">
                         <img
                             src="./assets/img/about/about2.png"
                             alt=""
@@ -161,7 +166,7 @@
                         <!-- About Avatar Item 1 -->
                         <article class="about-wrap">
                             <img
-                                src="./assets/img/fashion/feedback/feedback-avt12.jpg"
+                                src="./assets/img/about/avt1.jpg"
                                 alt=""
                                 class="about-wrap__avatar"
                             />
@@ -171,7 +176,7 @@
                         <!-- About Avatar Item 2 -->
                         <article class="about-wrap">
                             <img
-                                src="./assets/img/fashion/feedback/feedback-avt10.jpg"
+                                src="./assets/img/about/avt2.png"
                                 alt=""
                                 class="about-wrap__avatar"
                             />
@@ -181,7 +186,7 @@
                         <!-- About Avatar Item 3 -->
                         <article class="about-wrap">
                             <img
-                                src="./assets/img/fashion/feedback/feedback-avt8.jpg"
+                                src="./assets/img/about/avt3.jpg"
                                 alt=""
                                 class="about-wrap__avatar"
                             />
@@ -191,7 +196,7 @@
                         <!-- About Avatar Item 4 -->
                         <article class="about-wrap">
                             <img
-                                src="./assets/img/fashion/feedback/feedback-avt11.jpg"
+                                src="./assets/img/about/avt4.png"
                                 alt=""
                                 class="about-wrap__avatar"
                             />
