--- a/blog-detail.html
+++ b/blog-detail.html
@@ -286,70 +286,78 @@
                     >
                         Similar article you may like
                     </h3>
-                    <div class="row">
-                        <a
-                            href="./blog-detail.html"
-                            class="col-4 blog-page-container__item"
-                        >
-                            <img
-                                src="./assets/img/blog/blog4.png"
-                                alt=""
-                                class="blog-page-container__img blog-page-container__img--medium"
-                            />
-                            <p
-                                class="blog-page-container__date blog-page-container__date--large section-desc-3"
+                    <div>
+                        <div class="row">
+                            <a
+                                href="./blog-detail.html"
+                                class="col-4 col-lg-6 col-sm-12 blog-page-container__item"
                             >
-                                July 7, 2022 | By Warner
-                            </p>
-                            <h3
-                                class="blog-page-container__title section-heading-4"
-                            >
-                                12 type of shirts that a girl can wear in any
-                                casual party
-                            </h3>
-                        </a>
+                                <img
+                                    src="./assets/img/blog/blog4.png"
+                                    alt=""
+                                    class="blog-page-container__img blog-page-container__img--medium"
+                                />
+                                <p
+                                    class="blog-page-container__date blog-page-container__date--large section-desc-3"
+                                >
+                                    July 7, 2022 | By Warner
+                                </p>
+                                <h3
+                                    class="blog-page-container__title section-heading-4"
+                                >
+                                    12 type of shirts that a girl can wear in
+                                    any casual party
+                                </h3>
+                            </a>
 
-                        <a
-                            href="./blog-detail.html"
-                            class="col-4 blog-page-container__item"
-                        >
-                            <img
-                                src="./assets/img/blog/blog5.png"
-                                alt=""
-                                class="blog-page-container__img blog-page-container__img--medium"
-                            />
-                            <p
-                                class="blog-page-container__date blog-page-container__date--large section-desc-3"
+                            <a
+                                href="./blog-detail.html"
+                                class="col-4 col-lg-6 d-sm-none blog-page-container__item"
                             >
-                                April 1, 2024 | By Warner
-                            </p>
-                            <h3
-                                class="blog-page-container__title section-heading-4"
-                            >
-                                Modern trendy winter sweater for men and women
-                            </h3>
-                        </a>
+                                <img
+                                    src="./assets/img/blog/blog5.png"
+                                    alt=""
+                                    class="blog-page-container__img blog-page-container__img--medium"
+                                />
+                                <p
+                                    class="blog-page-container__date blog-page-container__date--large section-desc-3"
+                                >
+                                    April 1, 2024 | By Warner
+                                </p>
+                                <h3
+                                    class="blog-page-container__title section-heading-4"
+                                >
+                                    Modern trendy winter sweater for men and
+                                    women
+                                </h3>
+                            </a>
 
-                        <a
-                            href="./blog-detail.html"
-                            class="col-4 blog-page-container__item"
+                            <a
+                                href="./blog-detail.html"
+                                class="col-4 d-lg-none blog-page-container__item"
+                            >
+                                <img
+                                    src="./assets/img/blog/blog6.png"
+                                    alt=""
+                                    class="blog-page-container__img blog-page-container__img--medium"
+                                />
+                                <p
+                                    class="blog-page-container__date blog-page-container__date--large section-desc-3"
+                                >
+                                    April 1, 2024 | By Warner
+                                </p>
+                                <h3
+                                    class="blog-page-container__title section-heading-4"
+                                >
+                                    Type of casual sports shoes for women 2022
+                                </h3>
+                            </a>
+                        </div>
+                        <button
+                            class="d-none d-lg-block blog-page__btn btn-1 btn-small"
                         >
-                            <img
-                                src="./assets/img/blog/blog6.png"
-                                alt=""
-                                class="blog-page-container__img blog-page-container__img--medium"
-                            />
-                            <p
-                                class="blog-page-container__date blog-page-container__date--large section-desc-3"
-                            >
-                                April 1, 2024 | By Warner
-                            </p>
-                            <h3
-                                class="blog-page-container__title section-heading-4"
-                            >
-                                Type of casual sports shoes for women 2022
-                            </h3>
-                        </a>
+                            Load More
+                        </button>
                     </div>
                 </div>
             </div>
@@ -358,6 +366,11 @@
         <footer id="footer" class="footer"></footer>
         <script>
             load("#footer", "./templates/footer.html");
+        </script>
+        <script src="https://app.tudongchat.com/js/chatbox.js"></script>
+        <script>
+            const tudong_chatbox = new TuDongChat("_pqGd8_nJQHaLL7cpbiYc");
+            tudong_chatbox.initial();
         </script>
     </body>
 </html>
