--- a/faq.html
+++ b/faq.html
@@ -209,5 +209,10 @@
         <script>
             load("#footer", "./templates/footer.html");
         </script>
+        <script src="https://app.tudongchat.com/js/chatbox.js"></script>
+        <script>
+            const tudong_chatbox = new TuDongChat("_pqGd8_nJQHaLL7cpbiYc");
+            tudong_chatbox.initial();
+        </script>
     </body>
 </html>
