--- a/index.html
+++ b/index.html
@@ -3038,5 +3038,11 @@
                 toggle-target="#delete-confirm"
             ></div>
         </div>
+
+        <script src="https://app.tudongchat.com/js/chatbox.js"></script>
+        <script>
+            const tudong_chatbox = new TuDongChat("_pqGd8_nJQHaLL7cpbiYc");
+            tudong_chatbox.initial();
+        </script>
     </body>
 </html>
