--- a/product-detail.html
+++ b/product-detail.html
@@ -102,8 +102,8 @@
         <!-- Main -->
         <main class="container">
             <div class="product-detail">
-                <div class="row gx-5">
-                    <div class="col-6">
+                <div class="row gy-3 product-detail__container">
+                    <div class="col-6 col-lg-12">
                         <div class="js-tabs">
                             <figure>
                                 <img
@@ -148,12 +148,12 @@
                                 <img
                                     src="./assets/img/product/detail/detail3.png"
                                     alt=""
-                                    class="product-detail__img-small"
+                                    class="product-detail__img-small d-sm-none"
                                 />
                                 <img
                                     src="./assets/img/product/detail/detail4.png"
                                     alt=""
-                                    class="product-detail__img-small"
+                                    class="product-detail__img-small d-xl-none d-lg-block d-sm-none"
                                 />
                                 <button class="product-detail__btn-next">
                                     <img
@@ -200,7 +200,7 @@
                             </p>
                         </section>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-lg-12">
                         <p class="section-desc-3">Women-Cloths</p>
                         <h3 class="product-detail__name section-heading-3">
                             Modern Green Sweater
@@ -305,8 +305,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="row gx-5 product-detail--bot">
-                    <div class="col6">
+                <div class="row gy-3 product-detail--bot">
+                    <div class="col-6 col-lg-12">
                         <h3 class="section-heading-4">Customer Reviews</h3>
                         <div class="product-review">
                             <h4 class="product-review__total">77 Reviews</h4>
@@ -406,7 +406,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col6">
+                    <div class="col-6 col-lg-12">
                         <div class="product-write">
                             <h3 class="section-heading-4">
                                 How would you rate this?
@@ -474,13 +474,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="row g-3 product-feedback">
+                <div class="row gy-3 product-feedback">
                     <!-- Product feedback list 1 -->
                     <div
-                        class="row product-feedback__container product-feedback__container--active"
+                        class="product-feedback__container product-feedback__container--active"
                     >
                         <!-- Product feedback item 1 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt11.jpg"
@@ -527,7 +527,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 2 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt2.jpg"
@@ -574,7 +574,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 3 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt3.jpg"
@@ -621,7 +621,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 4 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt4.jpg"
@@ -668,7 +668,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 5 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt5.jpg"
@@ -715,7 +715,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 6 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt6.jpg"
@@ -764,9 +764,9 @@
                     </div>
 
                     <!-- Product feedback list 2 -->
-                    <div class="row product-feedback__container">
+                    <div class="product-feedback__container">
                         <!-- Product feedback item 1 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt1.jpg"
@@ -813,7 +813,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 2 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt7.jpg"
@@ -860,7 +860,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 3 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt8.jpg"
@@ -907,7 +907,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 4 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt9.jpg"
@@ -954,7 +954,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 5 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt10.jpg"
@@ -1001,7 +1001,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 6 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt12.jpg"
@@ -1050,9 +1050,9 @@
                     </div>
 
                     <!-- Product feedback list 3 -->
-                    <div class="row product-feedback__container">
+                    <div class="product-feedback__container">
                         <!-- Product feedback item 1 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt6.jpg"
@@ -1099,7 +1099,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 2 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt3.jpg"
@@ -1146,7 +1146,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 3 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt9.jpg"
@@ -1193,7 +1193,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 4 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt11.jpg"
@@ -1240,7 +1240,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 5 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt2.jpg"
@@ -1287,7 +1287,7 @@
                             </div>
                         </article>
                         <!-- Product feedback item 6 -->
-                        <article class="col-4">
+                        <article>
                             <div class="product-feedback__wrap">
                                 <img
                                     src="./assets/img/fashion/feedback/feedback-avt1.jpg"
@@ -1345,7 +1345,7 @@
                 </div>
                 <!-- Product New -->
                 <div class="prod">
-                    <div class="prod-content">
+                    <section class="prod-content">
                         <div>
                             <h3 class="section-heading section-heading-2">
                                 Similar products
@@ -1357,15 +1357,15 @@
                         </div>
                         <a
                             href="./product-men.html"
-                            class="prod-content__btn btn-1 btn-small"
+                            class="prod-content__btn btn-1 btn-small d-md-none"
                             >Browse All</a
                         >
-                    </div>
+                    </section>
 
                     <div class="prod-containers">
-                        <div class="row g-3">
+                        <div class="row gy-3">
                             <!-- Product New Item 1 -->
-                            <article class="col-4">
+                            <article class="col-4 col-lg-6 col-md-12">
                                 <div class="prod-item--new">
                                     <div class="prod-item__wrap-img">
                                         <a href="#!">
@@ -1446,7 +1446,7 @@
                                 </div>
                             </article>
                             <!-- Product New Item 2 -->
-                            <article class="col-4">
+                            <article class="col-4 col-lg-6 col-md-12">
                                 <div class="prod-item--new">
                                     <div class="prod-item__wrap-img">
                                         <a href="#!">
@@ -1527,7 +1527,7 @@
                                 </div>
                             </article>
                             <!-- Product New Item 3 -->
-                            <article class="col-4">
+                            <article class="col-4 col-lg-6 col-md-12">
                                 <div class="prod-item--new">
                                     <div class="prod-item__wrap-img">
                                         <a href="#!">
@@ -1609,7 +1609,7 @@
                             </article>
                         </div>
                     </div>
-                    <div class="separate"></div>
+                    <div class="separate d-lg-none"></div>
                 </div>
             </div>
         </main>
@@ -1619,11 +1619,11 @@
             load("#footer", "./templates/footer.html");
         </script>
 
-        <!-- Modal: Sign Up -->
+        <!-- Modal: popup cart -->
         <div id="popupCart" class="modal modal--large hide">
             <div class="modal__content modal__content--popup">
-                <div class="row gx-5">
-                    <div class="col-6">
+                <div class="row g-5">
+                    <div class="col-6 col-md-12">
                         <article class="modal-container">
                             <div class="modal-container__top">
                                 <p class="modal-container__item section-desc-3">
@@ -1739,7 +1739,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-md-12">
                         <div class="modal-container__price-wrap">
                             <p class="section-heading-4">
                                 Cart order total (3)
@@ -1763,7 +1763,7 @@
                             >View Cart</a
                         >
                         <a
-                            href="#!"
+                            href="./checkout.html"
                             class="btn-large modal-container__btn-checkout"
                             >Check Out</a
                         >
@@ -1785,7 +1785,7 @@
 
         <!-- Modal: delete -->
         <div id="delete-confirm" class="modal modal--small hide">
-            <div class="modal__content">
+            <div class="modal__content modal__content--delete">
                 <p class="modal__text">
                     Are you want remove this item from shopping cart?
                 </p>
@@ -1809,5 +1809,11 @@
                 toggle-target="#delete-confirm"
             ></div>
         </div>
+
+        <script src="https://app.tudongchat.com/js/chatbox.js"></script>
+        <script>
+            const tudong_chatbox = new TuDongChat("_pqGd8_nJQHaLL7cpbiYc");
+            tudong_chatbox.initial();
+        </script>
     </body>
 </html>
