--- a/cart-login.html
+++ b/cart-login.html
@@ -102,8 +102,8 @@
         <!-- Main -->
         <main class="container">
             <div class="cart">
-                <div class="row">
-                    <div class="col-6">
+                <div class="row gy-3">
+                    <div class="col-6 col-lg-12">
                         <article class="modal-container">
                             <div class="modal-container__top--cart">
                                 <p
@@ -288,7 +288,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-lg-12">
                         <div class="cart-sum">
                             <p class="cart-sum__title section-heading-4">
                                 Order Summury
@@ -353,8 +353,8 @@
                             </p>
                         </div>
                         <a
-                            href="./product-men.html"
-                            class="prod-content__btn btn-1 btn-small"
+                            href="./product-men-login.html"
+                            class="d-lg-none prod-content__btn btn-1 btn-small"
                             >Browse All</a
                         >
                     </section>
@@ -362,10 +362,10 @@
                     <div class="prod-containers">
                         <div class="row g-3">
                             <!-- Product New Item 1 -->
-                            <article class="col-4">
+                            <article class="col-4 col-lg-6 col-md-12">
                                 <div class="prod-item--new">
                                     <div class="prod-item__wrap-img">
-                                        <a href="./product-detail.html">
+                                        <a href="./product-detail-login.html">
                                             <img
                                                 src="./assets/img/fashion/product/new/product1.png"
                                                 alt=""
@@ -377,7 +377,7 @@
                                                 Added to wish list
                                             </p>
                                             <a
-                                                href="./with-list.html"
+                                                href="./with-list-login.html"
                                                 class="prod-item__link"
                                             >
                                                 View
@@ -416,7 +416,7 @@
                                             />
                                         </div>
                                     </div>
-                                    <a href="./product-detail.html">
+                                    <a href="./product-detail-login.html">
                                         <h3
                                             class="prod-item__title section-heading-4"
                                         >
@@ -447,10 +447,10 @@
                                 </div>
                             </article>
                             <!-- Product New Item 2 -->
-                            <article class="col-4">
+                            <article class="col-4 col-lg-6 col-md-12">
                                 <div class="prod-item--new">
                                     <div class="prod-item__wrap-img">
-                                        <a href="./product-detail.html">
+                                        <a href="./product-detail-login.html">
                                             <img
                                                 src="./assets/img/fashion/product/new/product2.png"
                                                 alt=""
@@ -462,7 +462,7 @@
                                                 Added to wish list
                                             </p>
                                             <a
-                                                href="./with-list.html"
+                                                href="./with-list-login.html"
                                                 class="prod-item__link"
                                             >
                                                 View
@@ -501,7 +501,7 @@
                                             />
                                         </div>
                                     </div>
-                                    <a href="./product-detail.html">
+                                    <a href="./product-detail-login.html">
                                         <h3
                                             class="prod-item__title section-heading-4"
                                         >
@@ -532,10 +532,10 @@
                                 </div>
                             </article>
                             <!-- Product New Item 3 -->
-                            <article class="col-4">
+                            <article class="col-4 col-lg-6 col-md-12">
                                 <div class="prod-item--new">
                                     <div class="prod-item__wrap-img">
-                                        <a href="./product-detail.html">
+                                        <a href="./product-detail-login.html">
                                             <img
                                                 src="./assets/img/fashion/product/new/product3.png"
                                                 alt=""
@@ -547,7 +547,7 @@
                                                 Added to wish list
                                             </p>
                                             <a
-                                                href="./with-list.html"
+                                                href="./with-list-login.html"
                                                 class="prod-item__link"
                                             >
                                                 View
@@ -586,7 +586,7 @@
                                             />
                                         </div>
                                     </div>
-                                    <a href="./product-detail.html">
+                                    <a href="./product-detail-login.html">
                                         <h3
                                             class="prod-item__title section-heading-4"
                                         >
@@ -618,19 +618,19 @@
                             </article>
                         </div>
                     </div>
-                    <div class="separate"></div>
+                    <div class="separate d-lg-none"></div>
                 </div>
             </div>
         </main>
         <!-- Footer -->
         <footer id="footer" class="footer"></footer>
         <script>
-            load("#footer", "./templates/footer.html");
+            load("#footer", "./templates/footer-login.html");
         </script>
 
         <!-- Modal: delete -->
         <div id="delete-confirm" class="modal modal--small hide">
-            <div class="modal__content">
+            <div class="modal__content modal__content--delete">
                 <p class="modal__text">
                     Are you want remove this item from shopping cart?
                 </p>
@@ -654,5 +654,10 @@
                 toggle-target="#delete-confirm"
             ></div>
         </div>
+        <script src="https://app.tudongchat.com/js/chatbox.js"></script>
+        <script>
+            const tudong_chatbox = new TuDongChat("_pqGd8_nJQHaLL7cpbiYc");
+            tudong_chatbox.initial();
+        </script>
     </body>
 </html>
