--- a/checkout.html
+++ b/checkout.html
@@ -102,8 +102,8 @@
         <!-- Main -->
         <main class="container">
             <div class="checkout">
-                <div class="row gx-5">
-                    <div class="col-6">
+                <div class="row">
+                    <div class="col-6 col-lg-12">
                         <p class="section-heading-3">Billing details</p>
                         <form action="" class="checkout-form">
                             <!-- Checkout form deliver -->
@@ -240,8 +240,8 @@
                                         id="checkout-country"
                                         type="tel"
                                         name="phone"
-                                        class="checkout-form__input"
-                                        placeholder="Your phone number checkout-form__input--checkout"
+                                        class="checkout-form__input checkout-form__input--checkout"
+                                        placeholder="Your phone number"
                                         pattern="(84|0[3|5|7|8|9])+([0-9]{8})"
                                     />
                                 </div>
@@ -270,7 +270,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-lg-12">
                         <div class="checkout__container">
                             <p class="cart-sum__title section-heading-4">
                                 Your order
@@ -550,20 +550,27 @@
         <script>
             load("#footer", "./templates/footer.html");
         </script>
-        <!-- Modal: delete -->
+        <!-- Modal: Success -->
         <div id="success" class="modal modal--small hide">
             <div class="modal__content">
                 <div class="modal__success"></div>
-                <p class="modal__title">Success!</p>
-                <p class="modal__desc">
-                    Congratulations on your successful order
+                <p class="modal__text modal__text--success">
+                    Transaction Successful!
                 </p>
-                <button
-                    class="modal__action btn-2 js-toggle"
-                    toggle-target="#success"
-                >
-                    Continue shopping
-                </button>
+
+                <div class="modal__action--success">
+                    <button
+                        class="js-toggle modal__btn modal__btn--view"
+                        toggle-target="#success"
+                    >
+                        View receipt
+                    </button>
+                    <a
+                        class="modal__btn modal__btn--cancel modal__btn--back"
+                        href="./product-men.html"
+                        >Back home</a
+                    >
+                </div>
             </div>
             <div
                 class="modal__overlay js-toggle"
